added data cleaning

--- a/Code/cleaning.ipynb
+++ b/Code/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,27 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = r'C:\\Users\\aaani\\OneDrive - Birmingham City University\\Postgrad\\Dissertation\\Data'"
+    "data_path = r'C:\\Users\\aaani\\OneDrive - Birmingham City University\\Postgrad\\Dissertation\\Data'\n",
+    "df = pd.read_csv(f'{data_path}/final_dataset.csv.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the columns to keep, this is done before loading the data to save on space complexity \n",
+    "# to display all columns, to be able to asses the na values\n",
+    "pd.set_option('display.max_rows', None)\n",
     "\n",
-    "admissions_cols = ['subject_id', 'hadm_id', 'admittime', 'dischtime', 'race', 'hospital_expire_flag']\n",
-    "diagnoses_cols = ['subject_id', 'hadm_id', 'seq_num', 'icd_code', 'icd_version']\n",
-    "d_icd_diagnoses_cols = ['icd_code', 'icd_version']\n",
-    "d_labitems_cols = ['itemid', 'label']\n",
-    "labevents_cols = ['subject_id', 'hadm_id', 'itemid', 'charttime', 'valuenum']\n",
     "\n",
-    "icustays_cols = ['subject_id', 'hadm_id', 'stay_id', 'outtime', 'los']\n",
-    "chartevents_cols = ['subject_id', 'hadm_id', 'itemid', 'charttime', 'valuenum', 'stay_id']\n",
-    "d_items_cols = ['itemid', 'label']\n",
-    "\n"
+    "missing_counts = df.isnull().sum()\n",
+    "missing_values_df = pd.DataFrame({\n",
+    "    'missing_count': missing_counts,\n",
+    "})\n",
+    "\n",
+    "print(missing_values_df.sort_values(by='missing_count', ascending=False))\n"
    ]
   },
   {
@@ -416,6 +415,30 @@
     "})\n",
     "\n",
     "print(missing_values_df.sort_values(by='missing_count', ascending=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# admittime is a datetime object\n",
+    "merged['admittime'] = pd.to_datetime(merged['admittime'])\n",
+    "\n",
+    "# For each patient, find the year of their first shifted admission\n",
+    "first_admission_year_shifted = merged.groupby('subject_id')['admittime'].min().dt.year\n",
+    "\n",
+    "# Map the earliest shifted year back to every admission for each patient\n",
+    "merged['first_admission_year_shifted'] = merged['subject_id'].map(first_admission_year_shifted)\n",
+    "\n",
+    "# Calculate the unique date shift for each patient\n",
+    "merged['date_shift'] = merged['first_admission_year_shifted'] - merged['anchor_year']\n",
+    "\n",
+    "# Create true_admission_year column by subtracting the shift\n",
+    "merged['true_admission_year'] = merged['admittime'].dt.year - merged['date_shift']\n",
+    "\n",
+    "merged['age_at_admission'] = merged['anchor_age'] + (merged['true_admission_year'] - merged['anchor_year'])\n"
    ]
   },
   {
